2010-02-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/oci8.h: add oci8_raise_by_msgno()
	    to retrieve a Oracle error message which depends on NLS_LANGUAGE.
	* ext/oci8/oranumber_util.c, ext/oci8/oranumber_util.h,
	  ext/oci8/extconf.rb: add handwritten conversion functions from
	    OCINumber internal representation to string and vice versa.
	* ext/oci8/ocinumber.c: 1. use handwritten conversion functions
	    instead of OCI functions to convert OraNumber to string
	    and vice varse. 2. add OraNumber#dump.
	* test/test_oranumber.rb: add test cases to check conversion from
	    OraNumber to string and vice varse.

2010-02-02  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: fix to support NNUMBERS with scale larger
	    than 38 by using scientific number notation to convert OraNumber
	    to BigDecimal. OraNumber#to_i is also fixed.
	    (reported by Raimonds Simanovskis)

2010-01-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: Use OCIErrorGet() to retrieve the error message
	    when the OCI return code is OCI_NO_DATA.
	    (reported by Raimonds Simanovskis)

2009-12-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c: 1. fix segv when GC starts while initializing
	    a bind object for object type. (reported by Remi Gagnon)
	    2. fix memory leak about 30 bytes per one bind object for object
	    type.

2009-11-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c: fix segv when binding a collection of string.
	    (reported by Raimonds Simanovskis)

2009-10-26  KUBO Takehiro  <kubo@jiubao.org>
	* NEW: fix typo.
	* dist-files, ext/oci8/.document: add ocihandle.c.
	* ext/oci8/ocihandle.c: add private methods OCIHandle#attr_get_*,
	    OCIHandle#attr_set_* and their rdoc comments.

2009-10-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/ocihandle.c: add ocihandle.c and move OCIHandle
	    definitions from oci8lib.c to the file.
